package Controllers;

import javafx.scene.Parent;

public interface SubScenable {
    Parent getRoot();

    void updateSubScene();
}
