@startuml

title __CONTROLLERS's Class Diagram__\n

  package  {
    package Controllers {
      class ControllerCreateUser {
          - status : String
          - stage : Stage
          - root : Parent
          - fxmlLoader : FXMLLoader
          - updateUserName : String
          + ControllerCreateUser()
          + openCreate()
          + openUpdate()
          - closeStage()
          - createUserIfValuesAreValid()
          - generateUserFromFields()
          + saveInfo()
          - updateInfo()
          - checkUpdateUserName()
          - convertDateStringToInt()
          + update()
      }
    }
  }
  

  package  {
    package Controllers {
      class ControllerCreateVacation {
          - stage : Stage
          - root : Parent
          - fxmlLoader : FXMLLoader
          {static} + VACATION_ADDED : String
          + showStage()
          + ControllerCreateVacation()
          - checkNumber()
          - showAlertWithoutHeaderText()
          + update()
      }
    }
  }
  

  package  {
    package Controllers {
      class ControllerHome {
          - stage : Stage
          - root : Parent
          - fxmlLoader : FXMLLoader
          - subSceneName : String
          + ControllerHome()
          + changeLoginStatus()
          + update()
      }
    }
  }
  

  package  {
    package Controllers {
      class ControllerLogin {
          {static} + CONTROLLER_LOGIN_ARGS_LOGGEDIN : String
          - stage : Stage
          - root : Parent
          - fxmlLoader : FXMLLoader
          + ControllerLogin()
          + errorMessageNotLoggedIn()
          + showStage()
          + update()
      }
    }
  }
  

  package  {
    package Controllers {
      class ControllerMessageCenter {
          - root : Parent
          - fxmlLoader : FXMLLoader
          {static} + REQUEST_PICKED : String
          + ControllerMessageCenter()
          + getRoot()
          + updateSubScene()
          - fillTableList()
          + informationDialog()
          - confirmPaymentPurchase()
          - confirmPurchase()
          + confirmDialog()
          + update()
          - initPurchase()
      }
    }
  }
  

  package  {
    package Controllers {
      interface SubScenable {
          {abstract} + getRoot()
          {abstract} + updateSubScene()
      }
    }
  }
  

  package  {
    package Controllers {
      class VacationSearchController {
          - root : Parent
          - fxmlLoader : FXMLLoader
          {static} + BTN_ADD : String
          {static} + VACATION_PICKED : String
          {static} + SEND_VACATION_PURCHASE_REQUEST : String
          + VacationSearchController()
          + getRoot()
          + updateSubScene()
          - vacationPicked()
          - informationDialog()
          + getVacationPickedKey()
          + getVacationPickedSeller()
          + update()
          - checkIfAlreadyRequested()
      }
    }
  }
  

  ControllerCreateUser -up-|> Observer
  ControllerCreateUser o-- UserDetailsView : myView
  ControllerCreateUser o-- UserModel : userModel
  ControllerCreateVacation -up-|> Observer
  ControllerCreateVacation -up-|> Observable
  ControllerCreateVacation o-- VacationCRUDView : vacationView
  ControllerCreateVacation o-- VacationModel : vacationModel
  ControllerHome -up-|> Observer
  ControllerHome o-- HomeView : homeView
  ControllerHome o-- VacationSearchController : vacationSearchController
  ControllerHome o-- ControllerMessageCenter : controllerMessageCenter
  ControllerHome o-- ControllerLogin : controllerLogin
  ControllerHome o-- ControllerCreateVacation : controllerCreateVacation
  ControllerHome o-- RequestModel : requestModel
  ControllerLogin -up-|> Observer
  ControllerLogin -up-|> Observable
  ControllerLogin o-- LoginView : loginView
  ControllerLogin o-- UserModel : userModel
  ControllerLogin o-- ControllerCreateUser : controllerCreateUser
  ControllerMessageCenter -up-|> Observer
  ControllerMessageCenter -up-|> SubScenable
  ControllerMessageCenter -up-|> Observable
  ControllerMessageCenter o-- MessageCenterView : messageCenterView
  ControllerMessageCenter o-- PaypalTable : paypalAPI
  ControllerMessageCenter o-- UserModel : userModel
  ControllerMessageCenter o-- PurchaseModel : purchaseModel
  ControllerMessageCenter o-- RequestModel : requestModel
  ControllerMessageCenter o-- MessageModel : messageModel
  ControllerMessageCenter o-- Request : pickedRequest
  VacationSearchController -up-|> Observer
  VacationSearchController -up-|> SubScenable
  VacationSearchController -up-|> Observable
  VacationSearchController o-- VacationSearchView : myView
  VacationSearchController o-- VacationModel : vacationModel
  VacationSearchController o-- Vacation : pickedVacation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
